index.css
button {
    background-color: #4CAF50;
    color: white;
    border: none;
    padding: 10px 20px;
    font-size: 16px;
    cursor: pointer;
    border-radius: 5px;
    margin: 10px;
}

button:hover {
    background-color: #45a049;
}

input {
    padding: 10px;
    font-size: 16px;
    border: 1px solid #ccc;
    border-radius: 5px;
    width: 100%;
    max-width: 300px;
}

input:focus {
    border-color: #4CAF50;
    outline: none;
}

#whole {
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: center;
    margin: 0 auto;
    width: 280px;
    max-width: 400px;
    padding: 20px;
    border: 1px solid #ccc;
    border-radius: 10px;
    word-wrap: break-word;

}

input {
    width: 100%;
    max-width: 300px;
    position: relative;
}

ul {
    padding: 0;
    list-style-type: none;
}

li{
    color: #4CAF50;
}

h3{
    margin-top: 5px;
    margin-bottom: 20px;
    
}

#delete{
    background-color: white;
    color: grey;
    border: 1px solid #ccc;
    padding: 10px 20px;
    font-size: 16px;
    cursor: pointer;
    border-radius: 5px;
    margin: 11px;
}

#delete:hover{
    color: #fff;
    background-color: red;
}

